Fixes #1059: Fixed overlapping images in infobox (#1071)

--- a/src/app/infobox/infobox.component.css
+++ b/src/app/infobox/infobox.component.css
@@ -1,7 +1,7 @@
 img{
   border-radius: 8px;
   width: 40%;
-  height: 40%;
+  height: 150px;
   float: right;
   margin-right:10px;
   margin-top:-50px;
